compile with new dependencies